# paper_europar

./: README.md
CUDA/: Makefile  main.cu
RemoveP/RemoveP/: main.cu
RemoveP/RemoveP_gpu/: Makefile  main.cu
SPH/SPH_dlb/: main.cpp
SPH/SPH_dlb_many_core/: main.cpp
SPH/SPH_dlb_many_core_openmp/: main.cu
benchmarks/CUDA_ele/: CMakeLists.txt  team.cpp
benchmarks/cell_list_kokkos_openfpm/Kokkos/: CMakeLists.txt  build.sh  cell_list_interation.cpp
benchmarks/mem_bound/CUDA/: membound.cu  membound_analysis.ncu-rep
benchmarks/mem_bound/Kokkos/: CMakeLists.txt  membound.cpp  membound.cu
benchmarks/mem_bound/OpenMP/: membound_cpu.c
benchmarks/nbody/: CMakeLists.txt  Makefile  example.mk  main.cpp  main_toward.cpp  main_working.cpp
benchmarks/teams/: team.cpp
benchmarks/teams_openmp/: batch_epyc.sh  batch_power.sh  team.cpp
miniBUDE/cuda/: Makefile  bude.c  bude_cuda.cu  performance_out  shared.c  shared.h
miniBUDE/openmp/: Makefile  bude.c
